# DDM_playground

./: README.md  pyproject.toml
.github/workflows/: CI.yml  publish.yml
ddm_playground/mesh/: data.py  gmsh.py  mesh.py  overlap.py  plot.py
docs/source/: conf.py  ddm_playground.mesh.rst  ddm_playground.rst  index.rst  introduction.rst  links.rst  modules.rst
docs/source/_static/: overlap.py  simple_mesh.py
examples/: mesh.py  overlap.py  simple_mesh.py  test.py
